--- a/client/src/stylesheets/AllFilters.module.css
+++ b/client/src/stylesheets/AllFilters.module.css
@@ -1,11 +1,25 @@
 .contfilter{
-    margin: 200px auto;
+    height: 100vh;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form{
     display: flex;
+    background-color: rgba(102, 34, 34, 0.637);
+    border-radius: 15px;
+    width: 250px;
+    padding: 20px 0px;
     flex-direction: column;
+}
+.form p{
+    margin: 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    font-style: italic;
 }
 
 .selects{
@@ -18,25 +32,31 @@
     cursor: pointer;
     border-radius: 5px;
     background-color: rgb(125, 215, 231);
+    transition: all ease .2s;
 }
-
-/* .option{
-    background-color: white;
+.selects:hover{
+    transform: scale(1.05);
+}
+.selects::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(255, 255, 255);
+}
+.selects::-webkit-scrollbar-thumb {
+    width: 10px;
+    border-radius: 10px;
+    background-color: rgb(27, 27, 27);
+}
+.selects:focus{
+    outline: none;
+}
+.option{
+    background-color: rgb(224, 224, 224);
     border: none;
-    font-weight: bold;
     cursor: pointer;
 }
-.option::-webkit-scrollbar-thumb {
-    background-color: #3677ef;
-    border: 1px solid rgb(193, 193, 193);
-  } */
-/* .option::-webkit-scrollbar-track{
-    width: 5px;
-    background-color: red;
-} */
 
 .applyBtn{
-    height: 40px;
+    height: 50px;
     margin: 10px auto;
     width: 110px;
     font-weight: bold;
