--- a/client/src/stylesheets/PokemonCard.module.css
+++ b/client/src/stylesheets/PokemonCard.module.css
@@ -1,5 +1,5 @@
 .cardCont{
-    width: 200px;
+    width: 150px;
     background-color: rgb(44, 44, 44);
     padding: 10px;
     border-radius: 10px;
@@ -25,6 +25,7 @@
 .cardName{
     color: rgb(179, 179, 179);
     text-decoration: none;
+    font-size: 28px;
     letter-spacing: -2px;
     font-style: italic;
 }
