--- a/client/src/stylesheets/PokemonDetail.module.css
+++ b/client/src/stylesheets/PokemonDetail.module.css
@@ -13,6 +13,7 @@
     border-radius: 20px;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.63);
     margin: 0px;
+    margin-top: 30px;
     padding: 10px 0;
     transition: all ease .1s;
 }
