--- a/client/src/stylesheets/CreatePokemon.module.css
+++ b/client/src/stylesheets/CreatePokemon.module.css
@@ -16,25 +16,58 @@
     padding: 20px 0;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     flex: 1 1;
-    background-color: rgba(65, 65, 65, 0.678);
+    border-radius: 20px;
+    background-color: rgba(22, 22, 22, 0.678);
 }
 .inputCont{
     display: flex;
     flex-direction: column;
     margin: auto;
     justify-content: center;
-    width: 50%;
+    width: 60%;
 }
 .inputCont div{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 .inputCont select{
-    margin: 5px 20px;
+    margin: 10px auto;
     width: 150px;
+    height: 30px;
+    font-size: 14px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: rgb(125, 215, 231);
+    transition: all ease .2s;
 }
+.inputCont select::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(255, 255, 255);
+}
+.inputCont select::-webkit-scrollbar-thumb {
+    width: 10px;
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: rgb(27, 27, 27);
+}
+
+.inputCont select:focus{
+    outline: none;
+}
+
+.inputCont select option{
+    cursor: pointer;
+    background-color: rgb(224, 224, 224);
+    border: none;
+}
+
 .inputCont input{
     width: 200px;
     height: 25px;
@@ -49,13 +82,14 @@
 
 .inputCont div span{
     color: rgb(255, 106, 106);
-    margin: 5px;
+    margin: 3px;
+    font-size: 15px;
     width: 200px;
     font-weight: bold;
 }
 
 .imageView{
-    border-radius: 10px;
+    border-radius: 25%;
     padding: 0;
     margin: 10px;
     width: 50%;
@@ -70,16 +104,86 @@
     background-color: rgb(27, 27, 27);
 }
 
+.img{
+    border-radius: 25%;
+    max-width: 100%;
+    max-height: 350px;
+}
+
 .features{
     color: white;
-    width: 50%;
+    width: 40%;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin: 10px 0px;
 }
 .features input{
-    margin: auto;
+    margin: 5px auto;
     width: 120px;
+    transition: all ease .2s;
+}
+.features input:hover{
+    transform: scale(1.1);
 }
 
+.features input[type="range"]{
+    -webkit-appearance: none;
+    height: 10px;
+    border-radius: 5px;
+    background-image: linear-gradient(293deg, rgba(212,212,212,1) 51%, rgba(0,0,0,1) 52%, rgba(0,0,0,1) 54%, rgba(255,0,0,1) 55%);
+    background-repeat: no-repeat;
+}
+
+.features input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 22%, rgba(255,0,0,1) 22%, rgba(255,0,0,1) 59%, rgba(0,0,0,1) 60%, rgba(0,0,0,1) 100%);
+    cursor: ew-resize;
+    box-shadow: 0 0 2px 0 #555;
+}
+.features input[type="range"]::before::-webkit-slider-thumb{
+    content: '';
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px 5px 0 0;
+    position: absolute;
+}
+
+.features input[type="range"]::-webkit-slider-runnable-track  {
+    -webkit-appearance: none;
+  box-shadow: none;
+  border: none;
+  background: transparent;
+}
+  
+
+.features span{
+    color: wheat;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin: 5px auto;
+    font-style: italic;
+    text-shadow: 0px 0px 2px rgb(252, 255, 57);
+}
+
+.create{
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(180, 180, 180);
+    background-color: rgb(1, 73, 7);
+    transition: all ease .2s;
+    cursor: pointer;
+}
+
+.create:hover{
+    transform: scale(1.1);
+    color: wheat;
+    background-color: rgb(0, 143, 12);
+}
