--- a/client/src/stylesheets/Nav.module.css
+++ b/client/src/stylesheets/Nav.module.css
@@ -9,7 +9,7 @@
     z-index: 1;
     margin: 0;
     padding: 0;
-    background-color: rgb(26, 16, 18);
+    background-color: rgb(27, 18, 18);
 }
 
 .nav ul{
@@ -38,14 +38,17 @@
 .navlink{
     margin: 0;
     border-radius: 5px;
-    background-color: rgba(109, 38, 175, 0.562);
+    background-color: rgba(85, 6, 6, 0.562);
     padding: 0;
     color: rgb(122, 122, 122);
     text-decoration: none;
+    transition: all ease .2s;
 }
 
 .active{
-    background-color: rgba(135, 71, 194, 0.562);
+    background-color: rgba(226, 32, 42, 0.562);
     color: white;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.705);
     font-size: 20px;
+    transform: scale(1.05);
 }
