--- a/client/src/stylesheets/PokemonDetail.module.css
+++ b/client/src/stylesheets/PokemonDetail.module.css
@@ -1,9 +1,14 @@
-.cont{
+.allcontainer{
     background: linear-gradient(293deg, rgba(212,212,212,1) 51%, rgba(0,0,0,1) 52%, rgba(0,0,0,1) 54%, rgba(255,0,0,1) 55%);
+    padding-top: 60px;
+}
+
+.cont{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     height: 100vh;
+    margin: 0;
     align-items: center;
 }
 .info{
@@ -23,7 +28,7 @@
 }
 
 .name{
-    font-size: 50px;
+    font-size: 42px;
     margin: 5px;
     color: #fffde6;
     font-style: italic;
@@ -48,7 +53,7 @@
 }
 
 .hpImg{
-    width: 200px;
+    width: 180px;
     filter: drop-shadow(5px 5px 5px #222);
 }
 
@@ -72,6 +77,7 @@
 
 .pokemonImage{
     width: 400px;
+    border-radius: 20px;
     filter: drop-shadow(0px 0px 20px rgba(255, 254, 204, 0.973));
 }
 
@@ -99,4 +105,34 @@
     border-radius: 50px;
     width: 90px;
     filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.836));
+}
+
+/* BACK BUTTON */
+
+.backdiv{
+    width: 100%;
+    margin: 0 0 -60px 0;
+    display: flex;
+    justify-content: flex-start;
+}
+.back{
+    margin-left: 10px;
+    border: none;
+    background-color: transparent;
+    color: rgb(216, 216, 216);
+    cursor: pointer;
+    font-size: 25px;
+    border-radius: 15px;
+    padding: 0px 2px 2px 0px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 2px 2px 2px black;
+    width: 50px;
+    transition: all ease .2s;
+}
+.back:hover{
+    background-color: black;
+    color: #ffea8b;
 }
