--- a/client/src/stylesheets/AllFilters.module.css
+++ b/client/src/stylesheets/AllFilters.module.css
@@ -11,6 +11,7 @@
     background-color: rgba(102, 34, 34, 0.637);
     border-radius: 15px;
     width: 250px;
+    margin-left: 20px;
     padding: 20px 0px;
     flex-direction: column;
 }
@@ -72,4 +73,22 @@
     background-color: rgb(32, 141, 18);
     color: rgb(255, 255, 255);
     transform: scale(1.1);
+}
+
+@media (max-width: 900px){
+    .contfilter{
+        display: none;
+        left: -200px;
+    }
+    .home{
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .form{
+        margin-top: -60px;
+        background-color: transparent;
+    }
 }
