--- a/client/src/stylesheets/Cards.module.css
+++ b/client/src/stylesheets/Cards.module.css
@@ -26,7 +26,13 @@
 
 .loading{
     width: 200px;
-    height: 190px;
     margin: 100px auto;
     border-radius: 50%;
+}
+
+@media (max-width: 900px){
+    .notFound{
+        width: 100%;
+        height: auto;
+    }
 }
