--- a/client/src/stylesheets/Nav.module.css
+++ b/client/src/stylesheets/Nav.module.css
@@ -52,3 +52,135 @@
     font-size: 20px;
     transform: scale(1.05);
 }
+.navMobile{
+    display: none;
+}
+.mobileCont{
+    display: none;
+}
+
+.mobileContSearch{
+    margin-top: 5px;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.contSearch{
+    margin-top: 5px;
+    padding: 0;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+}
+
+.searchHome{
+    display: none;
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px;
+}
+
+@media (max-width: 900px){
+    .nav{
+        display: none;
+    }
+    .searchMobile{
+        margin: auto;
+    }
+    .mobileCont{
+        width: 100%;
+        display: flex;
+        background-color: rgb(27, 18, 18);
+        justify-content: center;
+        height: 55px;
+        position: fixed;
+        z-index: 1;
+    }
+    .hamburguer{
+        position: fixed;
+        left: 0;
+        margin: 5px 0 0 20px;
+        color: white;
+        text-decoration: none;
+        cursor: pointer;
+        font-weight: bolder;
+        font-size: 20px;
+        background-color: transparent;
+        border: none;
+        transition: all ease .2s;
+    }
+    .hamburguer:focus{
+        outline: none;
+    }
+    .hamburguer:active{
+        transform: scale(1.1);
+    }
+    .navMobile{
+        top: 55px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        left: -600px;
+        z-index: 1;
+        width: 300px;
+        height: 90vh;
+        margin: 0;
+        padding: 0;
+        transition: all ease .2s;
+        background-color: rgba(36, 32, 32, 0.938);
+    }
+    .navMobile ul{
+        width: 40%;
+        margin: 0;
+        z-index: 1;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        list-style: none;
+    }
+    
+    .navMobile a{
+        margin: 10px 0;
+        padding: 0;
+        z-index: 1;
+        width: 100%;
+        text-decoration: none;
+    }
+    
+    .navMobile li{
+        margin: 0;
+        padding: 10px;
+        z-index: 1;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .navlink{
+        margin: 0;
+        border-radius: 5px;
+        background-color: transparent;
+        padding: 0;
+        z-index: 1;
+        color: rgb(122, 122, 122);
+        text-decoration: none;
+        transition: all ease .2s;
+    }
+    .active{
+        box-shadow: 2px 2px 2px rgba(155, 9, 9, 0);
+        color: white;
+        z-index: 1;
+        font-size: 20px;
+        transform: scale(1.05);
+    }
+    .openHam{
+        left: 0;
+        z-index: 2;
+    }
+    .searchHome{
+        display: none;
+    }
+}
