--- a/client/src/stylesheets/SearchBar.module.css
+++ b/client/src/stylesheets/SearchBar.module.css
@@ -25,7 +25,7 @@
 
 .btn{
     height: 40px;
-    width: 40px;
+    width: 100%;
     border: none;
     background-color: rgb(110, 82, 39);
     border-radius: 10px;
@@ -36,25 +36,19 @@
     text-align: center;
     cursor: pointer;
     transition: all ease .2s;
-    transform: rotate(-90deg);
 }
 
 .btn:hover{
     background-color: rgb(160, 117, 52);
-    transform: scale(1.05);
-    transform: rotate(-90deg);
     color: white;
 }
 
 .btnsearch{
     background-color: rgb(24, 92, 41);
-    transform: rotate(-90deg);
 }
 
 .btnsearch:hover{
     background-color: rgb(47, 177, 80);
-    transform: scale(1.05);
-    transform: rotate(-90deg);
     color: white;
 }
 
