--- a/client/src/stylesheets/PokemonDetail.module.css
+++ b/client/src/stylesheets/PokemonDetail.module.css
@@ -77,6 +77,7 @@
 
 .pokemonImage{
     min-width: 400px;
+    max-width: 40%;
     max-height: 450px;
     border-radius: 20px;
     filter: drop-shadow(0px 0px 20px rgba(255, 254, 204, 0.973));
@@ -112,12 +113,12 @@
 
 .backdiv{
     width: 100%;
-    margin: 0 0px -60px 40px;
+    margin: 0 0px -60px 0px;
     display: flex;
     justify-content: flex-start;
 }
 .back{
-    margin-left: 10px;
+    margin-left: 0px;
     border: none;
     background-color: transparent;
     color: rgb(216, 216, 216);
@@ -131,7 +132,7 @@
     justify-content: center;
     align-items: center;
     text-shadow: 2px 2px 2px black;
-    width: 50px;
+    width: 100px;
     transition: all ease .2s;
     position: absolute;
     z-index: 0;
